...
                android:layout_height="match_parent"
                android:padding="7sp"
                android:contentDescription="@string/album_list_title"
                android:text="@string/album_list_title" />

            <Spinner
                android:id="@+id/album_list_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/select_albums"
                android:padding="7sp"/>

            <Button
                android:id="@+id/add_album_to_musician_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7sp"
                android:contentDescription="@string/button_add_album_musician"
                android:text="@string/associate">

...
