<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_album"
        android:title="@string/album_list_menu"/>
    <item
        android:id="@+id/navigation_musicos"
        android:icon="@drawable/ic_zap"
        android:title="@string/musicians_list_menu"/>
    <item
        android:id="@+id/navigation_coleccionistas"
        android:icon="@drawable/ic_colecc"
        android:title="@string/collectors_list_menu"/>
    <item
        android:id="@+id/navigation_premios"
        android:icon="@drawable/ic_premios"
        android:title="@string/premios_list_title"/>
</menu>