<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="album"
            type="com.example.vinilos.models.Album"/>
        <variable
            name="viewModel"
            type="com.example.vinilos.viewmodels.CreateAlbumViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical"
        android:padding="14sp">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:text="@string/album_name_title"
            android:labelFor="@id/nameTextbox"/>

        <EditText
            android:id="@+id/nameTextbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:text="@string/album_cover_title"
            android:labelFor="@id/coverTextobox"/>

        <EditText
            android:id="@+id/coverTextobox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:text="@string/album_release_date_title" />

        <DatePicker
            android:id="@+id/releaseDatepicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:padding="7sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:text="@string/album_record_label_title" />

        <Spinner
            android:id="@+id/record_label_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"/>

        <TextView
            android:id="@+id/labelGenero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:text="@string/album_genre_title" />

        <Spinner
            android:id="@+id/genre_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp" />

        <TextView
            android:id="@+id/labelDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:text="@string/album_description_title"
            android:labelFor="@id/descriptionTextbox" />

        <EditText
            android:id="@+id/descriptionTextbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:width="21sp"
            android:padding="7sp"
            android:inputType="textLongMessage"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/add_album_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7sp"
            android:text="@string/agregar">

        </Button>
    </LinearLayout>

</layout>