<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_album"
        android:icon="@drawable/ic_album"
        android:title="@string/add_album_title"
        app:showAsAction="ifRoom"/>

</menu>